# nptel_num_methods

./: CMakeLists.txt  LICENSE  README.md
arrays/: 2d_array_to_func.c  array.c  array_2d.c  array_to_func.c  pointer_to_array.c
basics/: cube.c  data_types.c  external_variables.c  printit.c  tanh.c
functions/: memory.c  return_array.c
pointers/: array.c  char_array.c  meta_pointer.c  pointer_arithmetic.c  pointer_dtype.c
